renomear algumas coisas

--- a/resource-server-reactive/src/main/resources/application.properties
+++ b/resource-server-reactive/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-app.oauth2.scope-prefix = dev.purple.sandbox
-spring.application.name=study-oidc-spring
+br.dev.purpura.study.oauth2.namespace = br.dev.purpura.sandbox
+spring.application.name=study-oauth2-spring
 
 # Auth0
 spring.security.oauth2.resourceserver.jwt.issuer-uri = https://dev-loangxbucb40g0dp.us.auth0.com/
-spring.security.oauth2.resourceserver.jwt.audiences = http://localhost
+spring.security.oauth2.resourceserver.jwt.audiences = br.dev.purpura.sandbox
